apps/media/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: readarr
    app.kubernetes.io/name: readarr
  name: readarr
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: readarr
    app.kubernetes.io/name: readarr
  type: ClusterIP
